--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@ Questions
 2. Why does hero-banner + image not show?
 3. How to style the profile-pic to make it responsive to zoom
 4. How to size the project tiles, especially large tile so that they respond to scrolling
-6. How to fill the page height
-7. Width of large tile longer than small tiles
+6. How to fill the page height -> just use vh in height sizes?
+7. Width of large tile longer than small tiles DONE (set flex-grow: 1)
 8. Why is the width of aside-container and hf-container different even though both are set to 15%
-9. Why do media queries not work on dev tools/GitHub Page
+9. What's flex: x x x
 */
 
 /* page styles */
@@ -181,9 +181,11 @@ nav {
 	border: var(--thick) solid var(--dark);
 	border-radius: var(--curve);
 	margin: var(--thick);
+	flex-grow: 1;
 }
 
 .project-tile {
+	min-height: 100%;
 	background: grey;
 	color: var(--light);
 	opacity: 0.5;
@@ -192,7 +194,6 @@ nav {
 	padding: 0 0 1rem 0;
 	text-decoration: none;
 	transition: all 0.5s;
-	height: 100%;
 }
 .project-tile:hover {
 	background-image: url("images/bg.png");
@@ -205,7 +206,6 @@ nav {
 .project-tile div {
 	background: var(--dark);
 	padding: 8px 10px;
-	z-index: 2;
 	border-radius: 0 var(--curve) var(--curve) 0;
 }
 .project-tile div p {
@@ -215,7 +215,7 @@ nav {
 
 #large-tile {
 	flex-basis: 100%;
-	height: 30vh;
+	min-height: 30vh;
 }
 #ptl:hover {
 	background-image: url("https://www.hdwallpapers.in/download/purple_planet_and_purple_space_hd_purple-1920x1080.jpg");
@@ -223,7 +223,7 @@ nav {
 
 .small-tile {
 	flex-basis: calc(50% - 1em);
-	height: 20vh;
+	min-height: 20vh;
 }
 
 /* media queries */
