--- a/styles.css
+++ b/styles.css
@@ -178,12 +178,12 @@ nav {
 	justify-content: center;
 	flex-wrap: wrap;
 	padding-left: 1.5rem;
+	gap: 1rem;
 }
 
 .tile-wrap {
 	border: var(--thick) solid var(--dark);
 	border-radius: var(--curve);
-	margin: var(--thick);
 	flex-grow: 1;
 }
 
