--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ Questions
 /* page styles */
 :root {
 	--dark: #09062e;
+	--grey-bg: rgba(117, 115, 115, 0.329);
 	--light: wheat;
 	--curve: 0.5rem;
 	--thick: 0.3rem;
@@ -88,7 +89,7 @@ footer {
 
 .page-section {
 	align-items: stretch;
-	padding: 2rem 4rem;
+	padding: 4rem;
 }
 
 /* header/footer styles */
@@ -138,11 +139,13 @@ nav {
 /* main styles */
 .aside-container {
 	width: 15%;
-	border-right: var(--thick) solid var(--dark);
+	background: var(--grey-bg);
+	border: var(--thick) solid var(--dark);
+	border-radius: var(--curve);
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-end;
-	padding: 0 1.5rem;
+	padding: 1.5rem;
 	color: var(--dark);
 }
 
@@ -151,9 +154,13 @@ nav {
 }
 
 #about-me-para {
-	width: 70%;
-	padding: 0 1.5rem 0 1.5rem;
+	flex: 1;
+	padding: 1.5rem;
+	margin: 0 1.5rem;
 	text-align: justify;
+	background: var(--grey-bg);
+	border: var(--thick) solid var(--dark);
+	border-radius: var(--curve);
 }
 
 #about-me-para p {
@@ -161,14 +168,14 @@ nav {
 }
 
 #profile-pic {
-	display: flex;
-	justify-content: flex-end;
-	min-width: 15%;
-	background-image: url("./images/profile-pic.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+	max-width: 100%;
+	max-height: 70vh;
+	border: var(--thick) solid var(--dark);
 	border-radius: var(--curve);
+}
+
+#my-work {
+	padding-top: 0;
 }
 
 #project-grid {
@@ -178,13 +185,12 @@ nav {
 	justify-content: center;
 	flex-wrap: wrap;
 	padding-left: 1.5rem;
+	gap: 1.5rem;
 }
 
 .tile-wrap {
 	border: var(--thick) solid var(--dark);
 	border-radius: var(--curve);
-	margin: var(--thick);
-	flex-grow: 1;
 }
 
 .project-tile {
@@ -217,7 +223,7 @@ nav {
 }
 
 #large-tile {
-	flex-basis: 100%;
+	flex: 1 1 100%;
 	min-height: 30vh;
 }
 #ptl:hover {
@@ -225,7 +231,7 @@ nav {
 }
 
 .small-tile {
-	flex-basis: calc(50% - 1em);
+	flex: 1 1 49%;
 	min-height: 20vh;
 }
 
@@ -284,8 +290,6 @@ nav {
 		width: 100%;
 		display: flex;
 		justify-content: center;
-		border-right: none;
-		border-bottom: var(--thick) solid var(--dark);
 		padding: 1.5rem 0;
 		margin-bottom: 1.5rem;
 	}
@@ -299,9 +303,7 @@ nav {
 	#project-grid {
 		display: flex;
 		flex-direction: column;
-		align-items: stretch;
-		flex-wrap: wrap;
-		padding: 1.5rem 0;
+		padding-bottom: 1.5rem;
 	}
 	.project-tile {
 		min-height: 20vh;
